The result of _() is a unicode string so transforming it with the function unicode() is not needed.

'Check settings' has been renamed to 'Restore settings' for this is a more suitable name

EasyABC-window was sometimes unreachable because the window position was -32000,-32000. Negative values now ignored.

Fixed drawing problems with abcm2ps version 8.7.6

The File Settings tab in ABC Settings has comboboxes now for easier switching between different versions. If a path in
the dropdown combobox does not exist anymore it is removed. Also when you press 'Restore settings' the dropdowns are
cleared. The combobox contains the default path for abcm2ps, abc2midi and abc2abc so the buttons 'Change abcm2ps path'
and 'Restore abcm2ps path' have been removed.

The messages window is cleared when it contains old information. This prevents users from looking at errors that they
already have solved.

The Abc2midi tab in the settings now has the same background color as the other tabs

Sometimes opening the messages window showed the 'processed tune' window

AbcToMidi adds %%MIDI messages in order to apply the user's preferences of the melody and accompaniment instruments
given in the ABC Settings/abc2midi page; however, if the selected tune already contains these %%MIDI messages,
it will suppress some of these additions. (See the code process_abc_for_midi.) This avoids cluttering the
processed abc tune when you click on Internals/Input Processed tune.

The ABC Settings/File Settings now uses a combobox to store the path
names to the various third party executables. In event that you
have several versions of the executables, it is now easier to
switch between them.

The ABC Settings/Abc2midi page has an added entry box, Extra Midi
Player Parameters. If you are using an external midi player,
such as, timidity, you can now pass additional run time arguments
to the program.


